--- a/Scrolling/index.html
+++ b/Scrolling/index.html
@@ -15,7 +15,7 @@
     <div class="section" data-bg="yellow"></div>
     <div class="section" data-bg="red"></div>
 </div>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 
 <script src="js/savarjisho.js"></script>
 </body>
